--- a/project_1/contact.html
+++ b/project_1/contact.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Recipes</a></li>
+            <li><a href="index.html#recipes">Recipes</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
     </nav>
@@ -40,4 +40,5 @@
     <p>&copy; 2025 Culinary Reverie. All rights reserved.</p>
 </footer>
 </body>
+
 </html>
