--- a/project_1/oreo.html
+++ b/project_1/oreo.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Recipes</a></li>
+            <li><a href="index.html#recipes">Recipes</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -66,4 +66,5 @@
 </footer>
 
 </body>
+
 </html>
