--- a/project_1/index.html
+++ b/project_1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Culinary Reverie - Home</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
 <header>
@@ -76,4 +76,5 @@
     <p>&copy; 2025 Culinary Reverie. All rights reserved.</p>
 </footer>
 </body>
+
 </html>
